kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-red
  name: node-red
  namespace: node-red
spec:
  replicas: 10
  selector:
    matchLabels:
      app: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - image: docker.io/lspiehler/nodered-test-project:latest
        #- image: nodered/node-red:latest
          imagePullPolicy: Always
          name: node-red
          ports:
            - containerPort: 1880
              protocol: TCP
          resources: {}
