kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-red
  name: node-red
  namespace: node-red
spec:
  ports:
    - name: "1880"
      port: 1880
      protocol: TCP
      targetPort: 1880
  selector:
    app: node-red
  sessionAffinity: None
  type: ClusterIP
